--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css" />
+    <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <title>React App</title>
   </head>
   <body>
@@ -49,10 +50,7 @@
       </div>
     </div>
     <!-- Loading Axios from CDN -->
-    <!-- <script type="module">
-      // 👇️ import and use module here...
-      import axios from 'https://cdn.jsdelivr.net/npm/axios@1.3.5/+esm';
-      </script> -->
-    <script type="module" src="../dist/main.js" defer></script>
+    <script src="../node_modules/axios/dist/axios.min.js"></script>
+    <script src="../dist/main.js" defer></script>
   </body>
 </html>
