--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css" />
-    <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <link
       rel="stylesheet"
@@ -50,7 +50,7 @@
       </div>
     </div>
     <!-- Loading Axios from CDN -->
-    <script src="../node_modules/axios/dist/axios.min.js"></script>
+    <!-- <script src="../node_modules/axios/dist/axios.min.js"></script> -->
     <script src="../dist/main.js" defer></script>
   </body>
 </html>
